# s3_io

./: .gitignore  README.md  pyproject.toml
examples/: download_internvid_to_s3.py  download_internvid_to_s3.sh  process_and_upload_to_s3.py  process_and_upload_to_s3.sh
scripts/: set_up_env.sh
src/s3_io/: logger.py  utils.py
src/s3_io/async_task/: __init__.py  openxlab_task.py  s3_task.py  unzip_task.py  utils.py
src/s3_io/worker_scripts/: upload_to_s3.py
tests/: test_s3_connection.py
