[project]
authors = [{name = "Junjie Zhang", email = "junj.jay.zhang@gmail.com"}]
description = "For data downloading, uploading, and processing"
name = "s3_io"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels =  ["https://meta-forge.cn-gd.ufileos.com", "nvidia/label/cuda-12.4.0", "nvidia", "pytorch", "https://fast.prefix.dev/conda-forge", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
s3_io = { path = ".", editable = true }

[tool.pixi.tasks]
hello_world = "python tests/test_s3_connection.py"
download_internvid = "openxlab dataset get --dataset-repo vd-foundation/InternVid-10M-FLT --target-path /datasets"
download_internvid_to_s3 = "python examples/download_internvid_to_s3.py"
process_and_upload_to_s3 = "python examples/process_and_upload_to_s3.py"

[tool.pixi.dependencies]
pip = ">=24.3.1,<25"
boto3 = ">=1.35.59,<2"
pytz = ">=2024.2,<2025"
requests = ">=2.32.3,<3"
rich = ">=13.9.4,<14"
tqdm = ">=4.67.0,<5"
oss2 = ">=2.19.0,<3"
pathlib2 = ">=2.3.7.post1,<3"
p7zip = ">=16.2,<17"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/transformers/file_utils.py" = ["F401"]
"src/transformers/utils/dummy_*.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
